changed the whitespace issue

--- a/index2.css
+++ b/index2.css
@@ -351,7 +351,7 @@ section.stackIconBox {
 }
 
 section.footer {
-    height: 100vh;
+    height: auto;
 }
 
 footer{
